--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -23,8 +23,19 @@
         </div>
         <div class="last-nav">
             <button onclick="window.location.href='./login.html'">Log In</button>
+            <div class="burgur">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="x">
+                <i class="fa-solid fa-x"></i>
+            </div>
         </div>
-        
+        <div class="nav-dropdown">
+            <h2 class="pointer" onclick="window.location.href='../index.html'"><i class="fa-solid fa-house"></i> HOME</h2>
+            <h2 class="pointer"  onclick="window.location.href='./routes-card.html'"><i class="fa-solid fa-route"></i> ROUTES</h2>
+            <h2 class="pointer" onclick="window.location.href='./deals.html'"><i class="fa-brands fa-ideal"></i> DEALS</h2>
+            <h2 class="pointer" onclick="window.location.href='./contact-us.html'"><i class="fa-solid fa-phone"></i> CONTACT-US</h2>
+        </div>
     </div>
 
     <!-- Sign up -->
