--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
                 <i onclick="window.location.href='./HTML/booked-item.html'" class="fa-solid fa-book pointer"></i>
                 <p id="book-count">0</p>
             </div>
+            <div class="burgur">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="x">
+                <i class="fa-solid fa-x"></i>
+            </div>
+        </div>
+        <div class="nav-dropdown">
+            <h2 class="pointer" style="color: #ffad06;" onclick="window.location.href='./index.html'"><i class="fa-solid fa-house"></i> HOME</h2>
+            <h2 class="pointer" onclick="window.location.href='./HTML/routes-card.html'"><i class="fa-solid fa-route"></i> ROUTES</h2>
+            <h2 class="pointer" onclick="window.location.href='./HTML/deals.html'"><i class="fa-brands fa-ideal"></i> DEALS</h2>
+            <h2 class="pointer" onclick="window.location.href='./HTML/contact-us.html'"><i class="fa-solid fa-phone"></i> CONTACT-US</h2>
         </div>
     </div>
 
@@ -111,7 +123,7 @@
         <h1>Services</h1>
         <div>
             <div class="pointer" style="background: linear-gradient(rgb(255, 0, 0),rgb(189, 85, 85));">
-                <i class="fa-solid fa-map-location-dot i-size"></i></i>
+                <i class="fa-solid fa-map-location-dot i-size"></i>
                 <h1>Address Pickup</h1>
             </div>
             <div class="pointer" style="background: linear-gradient(rgb(17, 255, 0),rgb(99, 189, 85));">
@@ -163,6 +175,7 @@
             <p onclick="window.location.href='./HTML/contact-us.html'" class="pointer">Contact us</p>
         </div>
     </div>
+    
 
     <!-- Bottom section 2 -->
     <div class="bottom-section-2">
