--- a/HTML/contact-us.html
+++ b/HTML/contact-us.html
@@ -36,6 +36,18 @@
                 <i onclick="window.location.href='./booked-item.html'" class="fa-solid fa-book pointer"></i>
                 <p id="book-count">0</p>
             </div>
+            <div class="burgur">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="x">
+                <i class="fa-solid fa-x"></i>
+            </div>
+        </div>
+        <div class="nav-dropdown">
+            <h2 class="pointer" onclick="window.location.href='../index.html'"><i class="fa-solid fa-house"></i> HOME</h2>
+            <h2 class="pointer"  onclick="window.location.href='./routes-card.html'"><i class="fa-solid fa-route"></i> ROUTES</h2>
+            <h2 class="pointer" onclick="window.location.href='./deals.html'"><i class="fa-brands fa-ideal"></i> DEALS</h2>
+            <h2 class="pointer" onclick="window.location.href='./contact-us.html'"><i class="fa-solid fa-phone"></i> CONTACT-US</h2>
         </div>
     </div>
 
