--- a/HTML/forgetpass.html
+++ b/HTML/forgetpass.html
@@ -23,8 +23,19 @@
         </div>
         <div class="last-nav">
             <button onclick="window.location.href='./login.html'">Log In</button>
+            <div class="burgur">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="x">
+                <i class="fa-solid fa-x"></i>
+            </div>
         </div>
-        
+        <div class="nav-dropdown">
+            <h2 class="pointer" onclick="window.location.href='../index.html'"><i class="fa-solid fa-house"></i> HOME</h2>
+            <h2 class="pointer"  onclick="window.location.href='./routes-card.html'"><i class="fa-solid fa-route"></i> ROUTES</h2>
+            <h2 class="pointer" onclick="window.location.href='./deals.html'"><i class="fa-brands fa-ideal"></i> DEALS</h2>
+            <h2 class="pointer" onclick="window.location.href='./contact-us.html'"><i class="fa-solid fa-phone"></i> CONTACT-US</h2>
+        </div>
     </div>
 
 
@@ -34,7 +45,7 @@
         <div class="button-box">
             <div id="btn3"></div>
             <!-- <button type="button" class="toggle-btn" onclick="window.location.href='./forgetpass.html'">Forget P...</button> -->
-            <button class="toggle-btn1 btn">Forget Password..?</button>
+            <button id="btn1" class="toggle-btn1 btn">Forget Password..?</button>
         </div>
         <form class="signup" action="">
             <div class="otp">
